# OrcaSlicer

./: .gitignore  AGENTS.md  BUGFIX_EXTRUDER_PARAMS.md  BuildLinux.sh  CLAUDE.md  CMakeLists.txt  FILAMENT_EXTRUDER_ANALYSIS_FINAL.md  FILAMENT_EXTRUDER_ORIGINAL_VS_OPTIMIZED.md  README.md  build_deploy.sh  build_flatpak.sh  build_linux.sh  build_release_macos.sh  build_release_vs2022.bat  installer.nsi  pack_linux.sh  t-Path depsbuild) { Remove-Item -Path depsbuild -Recurse -Force; Write-Host Build directory deleted } else { Write-Host No build directory found }  version.inc  参数访问修复表.md  耗材继承修复总结.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
debian/: changelog  control  copyright  nvidia-wayland-zink.patch  postinst  rules  wxwidgets-url-cache.patch
doc/: Home.md  flutter_embedding_guide.md
docs/: CLOUD_ENGINE_TEST_REPORT.md  CLOUD_SLICING_ENGINE.md  DETAILED_TECHNICAL_ANALYSIS.md  FILAMENT_EXTRUDER_MAPPING.md  FILAMENT_EXTRUDER_MAPPING_FIX.md  FILAMENT_EXTRUDER_MAPPING_TEST_PLAN.md  FILAMENT_EXTRUDER_MAPPING_TEST_SUITE.md  FILAMENT_EXTRUDER_RELATIONSHIP_CN.md  PRODUCT_SUMMARY_FILAMENT_EXTRUDER_MAPPING.md  PRODUCT_SUMMARY_FILAMENT_EXTRUDER_MAPPING_COMPLETE.md  RESET_TIMING_ANALYSIS.md  flutter_integration.md  (+15 more)
src/: CMakeLists.txt  Engine.cpp  Engine.h  Snapmaker_Orca.cpp  Snapmaker_Orca_app_msvc.cpp
src/bury_cfg/: bury_point.cpp  bury_point.hpp
src/common_func/: common_func.cpp  common_func.hpp
src/dev-utils/: BaseException.cpp
src/dev-utils/platform/msw/: Snapmaker_Orca-gcodeviewer.rc.in  Snapmaker_Orca.rc.in
src/dev-utils/platform/osx/: Info.plist.in
src/dev-utils/platform/unix/: Snapmaker_Orca.desktop  build_appimage.sh.in  build_linux_image.sh.in
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  BoundaryValidator.cpp  BoundaryValidator.hpp  Brim.cpp  BuildVolume.cpp  BuildVolume.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Extruder.cpp  Extruder.hpp  ExtrusionEntity.hpp  FilamentColorLibrary.cpp  FilamentColorLibrary.hpp  FilamentHotBedNozzleRules.cpp  FilamentHotBedNozzleRules.hpp  FilamentSyncAlgorithm.cpp  FilamentSyncAlgorithm.hpp  Flow.cpp  FlushVolCalc.cpp  FlushVolCalc.hpp  FlushVolPredictor.cpp  FlushVolPredictor.hpp  GCode.cpp  GCode.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Layer.cpp  Layer.hpp  LayerRegion.cpp  MixedFilament.cpp  MixedFilament.hpp  Model.cpp  Model.hpp  MultiMaterialSegmentation.cpp  PerimeterGenerator.cpp  PlaceholderParser.cpp  Polyline.hpp  Preset.cpp  (+19 more)
src/libslic3r/Fill/: Fill.cpp
src/libslic3r/Format/: STEP.hpp  STEP_stub.cpp  bbs_3mf.cpp  svg.cpp
src/libslic3r/GCode/: AvoidCrossingPerimeters.cpp  ConflictChecker.cpp  CoolingBuffer.cpp  CoolingBuffer.hpp  GCodeProcessor.cpp  GCodeProcessor.hpp  ToolOrdering.cpp  ToolOrdering.hpp  WipeTower.cpp  WipeTower.hpp  WipeTower2.cpp  WipeTower2.hpp
src/libslic3r/Shape/: TextShape.cpp
src/libslic3r/Support/: SupportCommon.cpp  SupportCommon.hpp  SupportLayer.hpp  SupportMaterial.cpp  SupportParameters.hpp  SupportTransitionLayer.hpp  TreeSupport.cpp  TreeSupportCommon.hpp
src/mcut/include/mcut/internal/: frontend.h
src/mqtt/: CMakeLists.txt
src/orca-slice-engine/: CMakeLists.txt  GeometryCheck.cpp  GeometryCheck.hpp  JsonReport.cpp  JsonReport.hpp  SliceEngine.cpp  SliceEngine.hpp  Types.hpp  Utils.cpp  Utils.hpp  main.cpp  nanosvg.cpp
src/platform/unix/: build_appimage.sh.in
src/sentry_wrapper/: SentryWrapper.cpp  SentryWrapper.hpp
src/slic3r/: CMakeLists.txt
src/slic3r/Config/: Snapshot.cpp
src/slic3r/GUI/: 3DBed.cpp  3DScene.cpp  3DScene.hpp  AboutDialog.cpp  AddColorMixDialog.cpp  AddColorMixDialog.hpp  BBLStatusBarSend.cpp  BackgroundSlicingProcess.cpp  Camera.cpp  Camera.hpp  ConfigManipulation.cpp  ConfigWizard.cpp  ConfigWizard_private.hpp  CreatePresetsDialog.cpp  DesktopIntegrationDialog.cpp  DownloadManager.cpp  DownloadManager.hpp  Downloader.cpp  DownloaderFileGet.cpp  ExportSnapmakerU1.cpp  ExportSnapmakerU1.hpp  FilamentColorDialog.cpp  FilamentColorDialog.hpp  FilamentColorLibrary.cpp  FilamentColorLibrary.hpp  FilamentColorUtils.cpp  FilamentColorUtils.hpp  FlutterPreprintDialog.cpp  FlutterPreprintDialog.hpp  GCodeViewer.cpp  GCodeViewer.hpp  GLCanvas3D.cpp  GLCanvas3D.hpp  GLModel.cpp  GLSelectionRectangle.cpp  GLShadersManager.cpp  GLTexture.cpp  GLTexture.hpp  GUI.cpp  GUI_App.cpp  (+105 more)
src/slic3r/GUI/Flutter/: FlutterChannel.cpp  FlutterChannel.h  FlutterMiddleware.cpp  FlutterMiddleware.h  FlutterPanel.cpp  FlutterPanel.hpp  flutter_host.h  flutter_host_linux.cpp  flutter_host_macos.mm  flutter_host_win.cpp  flutter_platform.h  flutter_platform_linux.cpp  flutter_platform_macos.mm  flutter_platform_win.cpp
src/slic3r/GUI/Gizmos/: GLGizmoAdvancedCut.cpp  GLGizmoBase.cpp  GLGizmoBrimEars.cpp  GLGizmoCut.cpp  GLGizmoEmboss.cpp  GLGizmoFdmSupports.cpp  GLGizmoFuzzySkin.cpp  GLGizmoMeasure.cpp  GLGizmoMmuSegmentation.cpp  GLGizmoMmuSegmentation.hpp  GLGizmoMove.cpp  GLGizmoPainterBase.cpp  GLGizmoPainterBase.hpp  GLGizmoRotate.cpp  GLGizmoSVG.cpp  GLGizmoScale.cpp  GLGizmoSeam.cpp  GLGizmoSimplify.cpp  GLGizmosCommon.cpp  GLGizmosManager.cpp
src/slic3r/GUI/Jobs/: ArrangeJob.cpp
src/slic3r/GUI/Widgets/: DropDown.cpp  DropDown.hpp  Label.cpp  RadioGroup.cpp  RadioGroup.hpp  SegmentedToggle.cpp  StateColor.cpp  WebView.cpp  WebView.hpp
src/slic3r/GUI/filamentsync/: FilamentColorMapBox.cpp  FilamentColorMapBox.hpp  FilamentColorMapBoxGroup.cpp  FilamentColorMapBoxGroup.hpp  FilamentColorRadio.cpp  FilamentColorRadio.hpp  FilamentData.hpp  FilamentScrollBar.cpp  FilamentScrollBar.hpp  FilamentSyncAlgorithm.cpp  FilamentSyncAlgorithm.hpp  MachineFilamentPicker.cpp  MachineFilamentPicker.hpp  PlaterPreview.cpp  PlaterPreview.hpp  SyncConfirmDialog.cpp  SyncConfirmDialog.hpp  SyncFilamentColorDialog.cpp  SyncFilamentColorDialog.hpp
src/slic3r/Utils/: Bonjour.cpp  Bonjour.hpp  CalibUtils.cpp  Frustum.cpp  Frustum.hpp  Http.cpp  Http.hpp  MQTT.cpp  MQTT.hpp  MacDarkMode.hpp  MacDarkMode.mm  MoonRaker.cpp  MoonRaker.hpp  PresetUpdater.cpp  PresetUpdater.hpp  PrintHost.hpp  TimeSyncManager.cpp  TimeSyncManager.hpp
(+773 files in other folders)
